<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/quickblox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/url_quickblox"
        android:textColor="@color/black"
        android:textStyle="bold" android:autoLink="web"/>

    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickblox"
        android:layout_centerHorizontal="true"

        android:text="@string/title1"
        android:textColor="@color/dark_gray"
        android:textSize="17pt"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/url_samples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/url_samples"
        android:textColor="@color/black"
        android:textStyle="bold" android:autoLink="web"/>

    <Button
        android:id="@+id/butLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/butRegistration"
        android:layout_alignRight="@+id/butRegistration"
        android:layout_below="@+id/url_samples"
        android:onClick="buttonOnClick"
        android:padding="15dp"
        android:text="@string/login"
        android:textStyle="bold" android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/butRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butLogin"
        android:layout_centerHorizontal="true"
        android:onClick="buttonOnClick"
        android:padding="15dp"
        android:text="@string/registration"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butRegistration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/slogan"
        android:textSize="8pt"
        android:textColor="@color/dark_gray"
        android:gravity="center"
        android:textStyle="bold" />

</RelativeLayout>