<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:apiKey="0mv9IyEyYVzRfHbsWHTeG9N0SpwWaMS5yvaAqsQ"
        android:clickable="true" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="17dp"
        android:onClick="exit"
        android:text="@string/back" >
    </Button>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="24dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_alignParentLeft="true"
            android:text="@string/defaultAdress" />

        <Button
            android:id="@+id/findLocBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="doClick"
            android:text="@string/findLocation" />
    </LinearLayout>

</RelativeLayout>